# decoratemethod-python

./: README.md  decoratemethod.py  decoratemethod.pyi  pyproject.toml
tests/: test_decoratemethod.py
